deploy: 80ceeeea870dcc03513da316aa970f78b9119469

--- a/-/tags.html
+++ b/-/tags.html
@@ -4,12 +4,12 @@
   <meta charset='UTF-8' />
   <meta name='viewport' content='width=device-width, initial-scale=1' />
   <title>
-    Tag Index – Partially Ordered Note
+    Tag Index – Partially Ordered Notes
   </title>
   
     
       <meta property='og:description' content='Goodbye, world!' />
-      <meta property='og:site_name' content='Partially Ordered Note' />
+      <meta property='og:site_name' content='Partially Ordered Notes' />
       <meta property='og:image' content />
       <meta property='og:type' content='website' />
       <meta property='og:title' content='Tag Index' />
@@ -21,7 +21,7 @@
     <meta name='generator' content='Emanote' />
 
   
-  <link href='tailwind.css?instanceId=391e8f6a-a853-4217-9db7-ded8b835e024' rel='stylesheet' type='text/css' />
+  <link href='tailwind.css?instanceId=b0add9dd-ac38-4cde-83d1-fad394b458a4' rel='stylesheet' type='text/css' />
 
   <!-- Heist error element -->
   <style type='text/css'>
